--- a/HTML5App1/REader.csproj
+++ b/HTML5App1/REader.csproj
@@ -146,10 +146,10 @@
     <Content Include="cr1.png" />
     <Content Include="css\phone.css" />
     <Content Include="css\reader.css" />
+    <Resource Include="img\ajax-loader.gif" />
     <Content Include="img\favicon\1000.png" />
     <Content Include="img\favicon\1001.png" />
     <Content Include="img\favicon\10010.png" />
-    <Content Include="img\favicon\100100.png" />
     <Content Include="img\favicon\100101.png" />
     <Content Include="img\favicon\100102.png" />
     <Content Include="img\favicon\100103.png" />
@@ -162,7 +162,6 @@
     <Content Include="img\favicon\10011.png" />
     <Content Include="img\favicon\100110.png" />
     <Content Include="img\favicon\100111.png" />
-    <Content Include="img\favicon\100112.png" />
     <Content Include="img\favicon\100113.png" />
     <Content Include="img\favicon\100114.png" />
     <Content Include="img\favicon\100115.png" />
@@ -172,7 +171,6 @@
     <Content Include="img\favicon\100119.png" />
     <Content Include="img\favicon\10012.png" />
     <Content Include="img\favicon\100120.png" />
-    <Content Include="img\favicon\100121.png" />
     <Content Include="img\favicon\100122.png" />
     <Content Include="img\favicon\100123.png" />
     <Content Include="img\favicon\100124.png" />
@@ -180,65 +178,39 @@
     <Content Include="img\favicon\100126.png" />
     <Content Include="img\favicon\100127.png" />
     <Content Include="img\favicon\100128.png" />
-    <Content Include="img\favicon\100129.png" />
     <Content Include="img\favicon\10013.png" />
-    <Content Include="img\favicon\100130.png" />
-    <Content Include="img\favicon\100131.png" />
-    <Content Include="img\favicon\100132.png" />
-    <Content Include="img\favicon\100133.png" />
-    <Content Include="img\favicon\100134.png" />
-    <Content Include="img\favicon\100135.png" />
-    <Content Include="img\favicon\100136.png" />
-    <Content Include="img\favicon\100137.png" />
-    <Content Include="img\favicon\100138.png" />
     <Content Include="img\favicon\10014.png" />
-    <Content Include="img\favicon\100140.png" />
-    <Content Include="img\favicon\100141.png" />
-    <Content Include="img\favicon\100142.png" />
     <Content Include="img\favicon\100143.png" />
     <Content Include="img\favicon\100144.png" />
-    <Content Include="img\favicon\100145.png" />
-    <Content Include="img\favicon\100146.png" />
     <Content Include="img\favicon\100147.png" />
     <Content Include="img\favicon\100148.png" />
     <Content Include="img\favicon\100149.png" />
-    <Content Include="img\favicon\10015.png" />
     <Content Include="img\favicon\100150.png" />
     <Content Include="img\favicon\100151.png" />
     <Content Include="img\favicon\100152.png" />
-    <Content Include="img\favicon\100153.png" />
     <Content Include="img\favicon\100154.png" />
     <Content Include="img\favicon\100155.png" />
     <Content Include="img\favicon\100156.png" />
     <Content Include="img\favicon\100157.png" />
     <Content Include="img\favicon\100158.png" />
-    <Content Include="img\favicon\100159.png" />
     <Content Include="img\favicon\10016.png" />
     <Content Include="img\favicon\100160.png" />
     <Content Include="img\favicon\100161.png" />
     <Content Include="img\favicon\100162.png" />
     <Content Include="img\favicon\100163.png" />
-    <Content Include="img\favicon\100164.png" />
     <Content Include="img\favicon\100165.png" />
     <Content Include="img\favicon\100166.png" />
     <Content Include="img\favicon\100167.png" />
     <Content Include="img\favicon\100168.png" />
     <Content Include="img\favicon\100169.png" />
-    <Content Include="img\favicon\10017.png" />
     <Content Include="img\favicon\100170.png" />
     <Content Include="img\favicon\100171.png" />
     <Content Include="img\favicon\10018.png" />
     <Content Include="img\favicon\10019.png" />
     <Content Include="img\favicon\1002.png" />
-    <Content Include="img\favicon\10020.png" />
-    <Content Include="img\favicon\10021.png" />
     <Content Include="img\favicon\10022.png" />
-    <Content Include="img\favicon\10023.png" />
     <Content Include="img\favicon\10024.png" />
     <Content Include="img\favicon\10025.png" />
-    <Content Include="img\favicon\10026.png" />
-    <Content Include="img\favicon\10027.png" />
-    <Content Include="img\favicon\10028.png" />
     <Content Include="img\favicon\10029.png" />
     <Content Include="img\favicon\1003.png" />
     <Content Include="img\favicon\10030.png" />
@@ -255,10 +227,8 @@
     <Content Include="img\favicon\10040.png" />
     <Content Include="img\favicon\10041.png" />
     <Content Include="img\favicon\10043.png" />
-    <Content Include="img\favicon\10044.png" />
     <Content Include="img\favicon\10045.png" />
     <Content Include="img\favicon\10046.png" />
-    <Content Include="img\favicon\10047.png" />
     <Content Include="img\favicon\10048.png" />
     <Content Include="img\favicon\10049.png" />
     <Content Include="img\favicon\1005.png" />
@@ -278,16 +248,13 @@
     <Content Include="img\favicon\10062.png" />
     <Content Include="img\favicon\10063.png" />
     <Content Include="img\favicon\10064.png" />
-    <Content Include="img\favicon\10065.png" />
     <Content Include="img\favicon\10066.png" />
     <Content Include="img\favicon\10067.png" />
     <Content Include="img\favicon\10068.png" />
     <Content Include="img\favicon\10069.png" />
-    <Content Include="img\favicon\1007.png" />
     <Content Include="img\favicon\10070.png" />
     <Content Include="img\favicon\10071.png" />
     <Content Include="img\favicon\10072.png" />
-    <Content Include="img\favicon\10073.png" />
     <Content Include="img\favicon\10074.png" />
     <Content Include="img\favicon\10075.png" />
     <Content Include="img\favicon\10076.png" />
@@ -314,7 +281,6 @@
     <Content Include="img\favicon\10096.png" />
     <Content Include="img\favicon\10097.png" />
     <Content Include="img\favicon\10098.png" />
-    <Content Include="img\favicon\10099.png" />
     <Content Include="img\home.jpg" />
     <Content Include="img\home.png" />
     <Content Include="img\logos\engadget.jpg" />
@@ -336,27 +302,73 @@
     <Content Include="js\src\com\reader\article\ArticleController.js" />
     <Content Include="js\src\com\reader\article\ArticleListController.js" />
     <Content Include="js\src\com\reader\article\Articles.js" />
-    <Content Include="js\src\com\reader\controller\EditNewsFeed.js" />
     <Content Include="js\src\com\reader\controller\AddFeedSourceController.js" />
+    <Content Include="js\src\com\reader\controller\EditNewsFeed.js" />
     <Content Include="js\src\com\reader\hash\RegisterHash.js" />
     <Content Include="js\src\com\reader\Reader-min.js" />
     <Content Include="js\src\com\reader\Reader.js" />
     <Content Include="js\src\com\reader\setting\Settings.js" />
     <Content Include="js\src\com\reader\setting\SettingsController.js" />
-    <Content Include="js\src\com\reader\source\SourceList.js" />
     <Content Include="js\src\com\reader\source\Source.js" />
     <Content Include="js\src\com\reader\source\SourceController.js" />
+    <Content Include="js\src\com\reader\source\SourceList.js" />
     <Content Include="js\src\com\reader\source\Sources.js" />
     <Content Include="js\src\com\reader\view\Article.js" />
     <Content Include="js\src\com\reader\view\EditFeed.js" />
-    <Content Include="js\src\com\reader\view\NewsList.js" />
     <Content Include="js\src\com\reader\view\Home.js" />
+    <Content Include="js\src\com\reader\view\NewsList.js" />
+    <Content Include="js\src\jfm\cache\Cache.js" />
+    <Content Include="js\src\jfm\component\Component.js" />
+    <Content Include="js\src\jfm\cookie\Cookie.js" />
+    <Content Include="js\src\jfm\division\Division.js" />
+    <Content Include="js\src\jfm\division\Part.js" />
     <Content Include="js\src\jfm\dom\ChangeListener.js" />
     <Content Include="js\src\jfm\dom\Controller.js" />
     <Content Include="js\src\jfm\dom\DomManager.js" />
     <Content Include="js\src\jfm\dom\ListView.js" />
     <Content Include="js\src\jfm\dom\View.js" />
+    <Content Include="js\src\jfm\form\FormFields.js" />
     <Content Include="js\src\jfm\hash\HashChange.js" />
+    <Content Include="js\src\jfm\html\Anchor.js" />
+    <Content Include="js\src\jfm\html\Background.js" />
+    <Content Include="js\src\jfm\html\Button.js" />
+    <Content Include="js\src\jfm\html\Combobox.js" />
+    <Content Include="js\src\jfm\html\Constants.js" />
+    <Content Include="js\src\jfm\html\Container.js" />
+    <Content Include="js\src\jfm\html\DomManager.js" />
+    <Content Include="js\src\jfm\html\FormManager.js" />
+    <Content Include="js\src\jfm\html\form\Text.js" />
+    <Content Include="js\src\jfm\html\Iframe.js" />
+    <Content Include="js\src\jfm\html\Img.js" />
+    <Content Include="js\src\jfm\html\InlineEditor.js" />
+    <Content Include="js\src\jfm\html\Items.js" />
+    <Content Include="js\src\jfm\html\ListView.js" />
+    <Content Include="js\src\jfm\html\LoopScope.js" />
+    <Content Include="js\src\jfm\html\Popup.js" />
+    <Content Include="js\src\jfm\html\Span.js" />
+    <Content Include="js\src\jfm\html\Tabbar.js" />
+    <Content Include="js\src\jfm\io\Serializable.js" />
+    <Content Include="js\src\jfm\io\Serialize.js" />
+    <Content Include="js\src\jfm\jsfm.js" />
+    <Content Include="js\src\jfm\lang\Character.js" />
+    <Content Include="js\src\jfm\lang\Integer.js" />
+    <Content Include="js\src\jfm\lang\Runnable.js" />
+    <Content Include="js\src\jfm\lang\System.js" />
+    <Content Include="js\src\jfm\lang\Thread.js" />
+    <Content Include="js\src\jfm\Master.js" />
+    <Content Include="js\src\jfm\menu\Menu.js" />
+    <Content Include="js\src\jfm\menu\MenuItem.js" />
+    <Content Include="js\src\jfm\query\QueryStr.js" />
+    <Content Include="js\src\jfm\server\Server.js" />
+    <Content Include="js\src\jfm\tmpl\Scriptlet.js" />
+    <Content Include="js\src\jfm\util\ArrayList.js" />
+    <Content Include="js\src\jfm\util\Collection.js" />
+    <Content Include="js\src\jfm\util\Date.js" />
+    <Content Include="js\src\jfm\util\HashMap.js" />
+    <Content Include="js\src\jfm\util\List.js" />
+    <Content Include="js\src\jfm\util\Map.js" />
+    <Content Include="js\src\jfm\util\Store.js" />
+    <Content Include="js\src\jfm\util\Utility.js" />
     <Content Include="js\src\lib\ChangeListener.js" />
     <Content Include="js\src\lib\FillContent.js" />
     <Content Include="js\src\lib\MSGesture.js" />
