--- a/HTML5App1/REader.csproj
+++ b/HTML5App1/REader.csproj
@@ -151,6 +151,7 @@
     <Content Include="Html\article.view.html" />
     <Content Include="Html\articles.html" />
     <Content Include="Html\addfeedsource.html" />
+    <Content Include="Html\addfeedsource.view.html" />
     <Content Include="Html\editfeed.view.html" />
     <Content Include="Html\home.view.html" />
     <Content Include="Html\newslist.view.html" />
@@ -315,7 +316,6 @@
     <Content Include="js\src\com\reader\controller\AddFeedSourceController.js" />
     <Content Include="js\src\com\reader\controller\EditNewsFeed.js" />
     <Content Include="js\src\com\reader\hash\RegisterHash.js" />
-    <Content Include="js\src\com\reader\Reader-min.js" />
     <Content Include="js\src\com\reader\Reader.js" />
     <Content Include="js\src\com\reader\setting\Settings.js" />
     <Content Include="js\src\com\reader\setting\SettingsController.js" />
@@ -323,63 +323,20 @@
     <Content Include="js\src\com\reader\source\SourceController.js" />
     <Content Include="js\src\com\reader\source\SourceList.js" />
     <Content Include="js\src\com\reader\source\Sources.js" />
+    <Content Include="js\src\com\reader\store\FeedList.js" />
     <Content Include="js\src\com\reader\view\Article.js" />
+    <Content Include="js\src\com\reader\view\AddFeedSource.js" />
     <Content Include="js\src\com\reader\view\EditFeed.js" />
     <Content Include="js\src\com\reader\view\Home.js" />
     <Content Include="js\src\com\reader\view\NewsList.js" />
-    <Content Include="js\src\jfm\cache\Cache.js" />
-    <Content Include="js\src\jfm\component\Component.js" />
-    <Content Include="js\src\jfm\cookie\Cookie.js" />
-    <Content Include="js\src\jfm\division\Division.js" />
-    <Content Include="js\src\jfm\division\Part.js" />
     <Content Include="js\src\jfm\dom\ChangeListener.js" />
     <Content Include="js\src\jfm\dom\Controller.js" />
     <Content Include="js\src\jfm\dom\DomManager.js" />
     <Content Include="js\src\jfm\dom\ListView.js" />
     <Content Include="js\src\jfm\dom\View.js" />
-    <Content Include="js\src\jfm\form\FormFields.js" />
     <Content Include="js\src\jfm\hash\HashChange.js" />
-    <Content Include="js\src\jfm\html\Anchor.js" />
-    <Content Include="js\src\jfm\html\Background.js" />
-    <Content Include="js\src\jfm\html\Button.js" />
-    <Content Include="js\src\jfm\html\Combobox.js" />
-    <Content Include="js\src\jfm\html\Constants.js" />
-    <Content Include="js\src\jfm\html\Container.js" />
-    <Content Include="js\src\jfm\html\DomManager.js" />
-    <Content Include="js\src\jfm\html\FormManager.js" />
-    <Content Include="js\src\jfm\html\form\Text.js" />
-    <Content Include="js\src\jfm\html\Iframe.js" />
-    <Content Include="js\src\jfm\html\Img.js" />
-    <Content Include="js\src\jfm\html\InlineEditor.js" />
-    <Content Include="js\src\jfm\html\Items.js" />
-    <Content Include="js\src\jfm\html\ListView.js" />
-    <Content Include="js\src\jfm\html\LoopScope.js" />
-    <Content Include="js\src\jfm\html\Popup.js" />
-    <Content Include="js\src\jfm\html\Span.js" />
-    <Content Include="js\src\jfm\html\Tabbar.js" />
-    <Content Include="js\src\jfm\io\Serializable.js" />
-    <Content Include="js\src\jfm\io\Serialize.js" />
-    <Content Include="js\src\jfm\jsfm.js" />
-    <Content Include="js\src\jfm\lang\Character.js" />
-    <Content Include="js\src\jfm\lang\Integer.js" />
-    <Content Include="js\src\jfm\lang\Runnable.js" />
-    <Content Include="js\src\jfm\lang\System.js" />
-    <Content Include="js\src\jfm\lang\Thread.js" />
-    <Content Include="js\src\jfm\Master.js" />
-    <Content Include="js\src\jfm\menu\Menu.js" />
-    <Content Include="js\src\jfm\menu\MenuItem.js" />
-    <Content Include="js\src\jfm\query\QueryStr.js" />
-    <Content Include="js\src\jfm\server\Server.js" />
-    <Content Include="js\src\jfm\tmpl\Scriptlet.js" />
-    <Content Include="js\src\jfm\util\ArrayList.js" />
-    <Content Include="js\src\jfm\util\Collection.js" />
-    <Content Include="js\src\jfm\util\Date.js" />
-    <Content Include="js\src\jfm\util\HashMap.js" />
-    <Content Include="js\src\jfm\util\List.js" />
-    <Content Include="js\src\jfm\util\Map.js" />
-    <Content Include="js\src\jfm\util\Store.js" />
-    <Content Include="js\src\jfm\util\Utility.js" />
     <Content Include="js\src\lib\ChangeListener.js" />
+    <Content Include="js\src\lib\idbStore.js" />
     <Content Include="js\src\lib\ReadFile.js" />
     <Content Include="js\src\lib\FillContent.js" />
     <Content Include="js\src\lib\MSGesture.js" />
