--- a/HTML5App1/REader.csproj
+++ b/HTML5App1/REader.csproj
@@ -142,9 +142,76 @@
     <Content Include="Assets\Tiles\IconicTileSmall.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="contjs\jsfm-min.js" />
+    <Content Include="contjs\src\com\reader\abstract\ItemList-min.js" />
+    <Content Include="contjs\src\com\reader\article\Article-min.js" />
+    <Content Include="contjs\src\com\reader\article\ArticleController-min.js" />
+    <Content Include="contjs\src\com\reader\article\ArticleListController-min.js" />
+    <Content Include="contjs\src\com\reader\article\Articles-min.js" />
+    <Content Include="contjs\src\com\reader\controller\AddFeedSourceController-min.js" />
+    <Content Include="contjs\src\com\reader\controller\EditNewsFeed-min.js" />
+    <Content Include="contjs\src\com\reader\hash\RegisterHash-min.js" />
+    <Content Include="contjs\src\com\reader\Reader-min.js" />
+    <Content Include="contjs\src\com\reader\setting\Settings-min.js" />
+    <Content Include="contjs\src\com\reader\setting\SettingsController-min.js" />
+    <Content Include="contjs\src\com\reader\source\Source-min.js" />
+    <Content Include="contjs\src\com\reader\source\SourceController-min.js" />
+    <Content Include="contjs\src\com\reader\source\Sources-min.js" />
+    <Content Include="contjs\src\com\reader\store\FeedList-min.js" />
+    <Content Include="contjs\src\com\reader\view\AddFeedSource-min.js" />
+    <Content Include="contjs\src\com\reader\view\Article-min.js" />
+    <Content Include="contjs\src\com\reader\view\EditFeed-min.js" />
+    <Content Include="contjs\src\com\reader\view\Home-min.js" />
+    <Content Include="contjs\src\com\reader\view\NewsList-min.js" />
+    <Content Include="contjs\src\jfm\dom\ChangeListener-min.js" />
+    <Content Include="contjs\src\jfm\dom\Controller-min.js" />
+    <Content Include="contjs\src\jfm\dom\DomManager-min.js" />
+    <Content Include="contjs\src\jfm\dom\ListView-min.js" />
+    <Content Include="contjs\src\jfm\dom\View-min.js" />
+    <Content Include="contjs\src\jfm\hash\HashChange-min.js" />
+    <Content Include="contjs\src\lib\FillContent-min.js" />
+    <Content Include="contjs\src\lib\idbStore-min.js" />
+    <Content Include="contjs\src\lib\parser-min.js" />
+    <Content Include="contjs\src\lib\ReadFile-min.js" />
+    <Content Include="contjs\src\lib\Utility-min.js" />
     <Content Include="cr1.png" />
     <Content Include="css\phone.css" />
     <Content Include="css\reader.css" />
+    <Content Include="js\jsfm.js" />
+    <Content Include="js\src\com\reader\abstract\ItemList.js" />
+    <Content Include="js\src\com\reader\article\Article.js" />
+    <Content Include="js\src\com\reader\article\ArticleController.js" />
+    <Content Include="js\src\com\reader\article\ArticleListController.js" />
+    <Content Include="js\src\com\reader\article\Articles.js" />
+    <Content Include="js\src\com\reader\controller\AddFeedSourceController.js" />
+    <Content Include="js\src\com\reader\controller\EditNewsFeed.js" />
+    <Content Include="js\src\com\reader\hash\RegisterHash.js" />
+    <Content Include="js\src\com\reader\Reader.js" />
+    <Content Include="js\src\com\reader\setting\Settings.js" />
+    <Content Include="js\src\com\reader\setting\SettingsController.js" />
+    <Content Include="js\src\com\reader\source\Source.js" />
+    <Content Include="js\src\com\reader\source\SourceController.js" />
+    <Content Include="js\src\com\reader\source\SourceList.js" />
+    <Content Include="js\src\com\reader\source\Sources.js" />
+    <Content Include="js\src\com\reader\store\FeedList.js" />
+    <Content Include="js\src\com\reader\view\AddFeedSource.js" />
+    <Content Include="js\src\com\reader\view\Article.js" />
+    <Content Include="js\src\com\reader\view\EditFeed.js" />
+    <Content Include="js\src\com\reader\view\Home.js" />
+    <Content Include="js\src\com\reader\view\NewsList.js" />
+    <Content Include="js\src\jfm\dom\ChangeListener.js" />
+    <Content Include="js\src\jfm\dom\Controller.js" />
+    <Content Include="js\src\jfm\dom\DomManager.js" />
+    <Content Include="js\src\jfm\dom\ListView.js" />
+    <Content Include="js\src\jfm\dom\View.js" />
+    <Content Include="js\src\jfm\hash\HashChange.js" />
+    <Content Include="js\src\lib\ChangeListener.js" />
+    <Content Include="js\src\lib\FillContent.js" />
+    <Content Include="js\src\lib\idbStore.js" />
+    <Content Include="js\src\lib\MSGesture.js" />
+    <Content Include="js\src\lib\parser.js" />
+    <Content Include="js\src\lib\ReadFile.js" />
+    <Content Include="js\src\lib\Utility.js" />
     <Resource Include="img\ajax-loader.gif" />
     <Content Include="Html\addfeeds.html" />
     <Content Include="Html\article.html" />
@@ -307,41 +374,6 @@
     <Content Include="img\settings.png" />
     <Content Include="js\jquery-swipe.js" />
     <Content Include="js\jquery.js" />
-    <Content Include="js\jsfm.js" />
-    <Content Include="js\src\com\reader\abstract\ItemList.js" />
-    <Content Include="js\src\com\reader\article\Article.js" />
-    <Content Include="js\src\com\reader\article\ArticleController.js" />
-    <Content Include="js\src\com\reader\article\ArticleListController.js" />
-    <Content Include="js\src\com\reader\article\Articles.js" />
-    <Content Include="js\src\com\reader\controller\AddFeedSourceController.js" />
-    <Content Include="js\src\com\reader\controller\EditNewsFeed.js" />
-    <Content Include="js\src\com\reader\hash\RegisterHash.js" />
-    <Content Include="js\src\com\reader\Reader.js" />
-    <Content Include="js\src\com\reader\setting\Settings.js" />
-    <Content Include="js\src\com\reader\setting\SettingsController.js" />
-    <Content Include="js\src\com\reader\source\Source.js" />
-    <Content Include="js\src\com\reader\source\SourceController.js" />
-    <Content Include="js\src\com\reader\source\SourceList.js" />
-    <Content Include="js\src\com\reader\source\Sources.js" />
-    <Content Include="js\src\com\reader\store\FeedList.js" />
-    <Content Include="js\src\com\reader\view\Article.js" />
-    <Content Include="js\src\com\reader\view\AddFeedSource.js" />
-    <Content Include="js\src\com\reader\view\EditFeed.js" />
-    <Content Include="js\src\com\reader\view\Home.js" />
-    <Content Include="js\src\com\reader\view\NewsList.js" />
-    <Content Include="js\src\jfm\dom\ChangeListener.js" />
-    <Content Include="js\src\jfm\dom\Controller.js" />
-    <Content Include="js\src\jfm\dom\DomManager.js" />
-    <Content Include="js\src\jfm\dom\ListView.js" />
-    <Content Include="js\src\jfm\dom\View.js" />
-    <Content Include="js\src\jfm\hash\HashChange.js" />
-    <Content Include="js\src\lib\ChangeListener.js" />
-    <Content Include="js\src\lib\idbStore.js" />
-    <Content Include="js\src\lib\ReadFile.js" />
-    <Content Include="js\src\lib\FillContent.js" />
-    <Content Include="js\src\lib\MSGesture.js" />
-    <Content Include="js\src\lib\parser.js" />
-    <Content Include="js\src\lib\Utility.js" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\AppResources.resx">
