--- a/HTML5App1/REader.csproj
+++ b/HTML5App1/REader.csproj
@@ -156,6 +156,7 @@
     <Content Include="contjs\src\com\reader\setting\SettingsController-min.js" />
     <Content Include="contjs\src\com\reader\source\Source-min.js" />
     <Content Include="contjs\src\com\reader\source\SourceController-min.js" />
+    <Content Include="contjs\src\com\reader\source\SourceList-min.js" />
     <Content Include="contjs\src\com\reader\source\Sources-min.js" />
     <Content Include="contjs\src\com\reader\store\FeedList-min.js" />
     <Content Include="contjs\src\com\reader\view\AddFeedSource-min.js" />
@@ -177,41 +178,6 @@
     <Content Include="cr1.png" />
     <Content Include="css\phone.css" />
     <Content Include="css\reader.css" />
-    <Content Include="js\jsfm.js" />
-    <Content Include="js\src\com\reader\abstract\ItemList.js" />
-    <Content Include="js\src\com\reader\article\Article.js" />
-    <Content Include="js\src\com\reader\article\ArticleController.js" />
-    <Content Include="js\src\com\reader\article\ArticleListController.js" />
-    <Content Include="js\src\com\reader\article\Articles.js" />
-    <Content Include="js\src\com\reader\controller\AddFeedSourceController.js" />
-    <Content Include="js\src\com\reader\controller\EditNewsFeed.js" />
-    <Content Include="js\src\com\reader\hash\RegisterHash.js" />
-    <Content Include="js\src\com\reader\Reader.js" />
-    <Content Include="js\src\com\reader\setting\Settings.js" />
-    <Content Include="js\src\com\reader\setting\SettingsController.js" />
-    <Content Include="js\src\com\reader\source\Source.js" />
-    <Content Include="js\src\com\reader\source\SourceController.js" />
-    <Content Include="js\src\com\reader\source\SourceList.js" />
-    <Content Include="js\src\com\reader\source\Sources.js" />
-    <Content Include="js\src\com\reader\store\FeedList.js" />
-    <Content Include="js\src\com\reader\view\AddFeedSource.js" />
-    <Content Include="js\src\com\reader\view\Article.js" />
-    <Content Include="js\src\com\reader\view\EditFeed.js" />
-    <Content Include="js\src\com\reader\view\Home.js" />
-    <Content Include="js\src\com\reader\view\NewsList.js" />
-    <Content Include="js\src\jfm\dom\ChangeListener.js" />
-    <Content Include="js\src\jfm\dom\Controller.js" />
-    <Content Include="js\src\jfm\dom\DomManager.js" />
-    <Content Include="js\src\jfm\dom\ListView.js" />
-    <Content Include="js\src\jfm\dom\View.js" />
-    <Content Include="js\src\jfm\hash\HashChange.js" />
-    <Content Include="js\src\lib\ChangeListener.js" />
-    <Content Include="js\src\lib\FillContent.js" />
-    <Content Include="js\src\lib\idbStore.js" />
-    <Content Include="js\src\lib\MSGesture.js" />
-    <Content Include="js\src\lib\parser.js" />
-    <Content Include="js\src\lib\ReadFile.js" />
-    <Content Include="js\src\lib\Utility.js" />
     <Resource Include="img\ajax-loader.gif" />
     <Content Include="Html\addfeeds.html" />
     <Content Include="Html\article.html" />
